// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FormInput /> should match the snapshot 1`] = `
<DocumentFragment>
  <form
    action="#"
  >
    <input
      class="bg-zinc-200 dark:bg-zinc-800 border border-solid border-zinc-900 dark:border-zinc-100 m-2 p-1 rounded-lg"
      name="email"
      type="text"
      value=""
    />
  </form>
</DocumentFragment>
`;

exports[`<FormInput /> with type: "password" should match the snapshot 1`] = `
<DocumentFragment>
  <form
    action="#"
  >
    <input
      class="bg-zinc-200 dark:bg-zinc-800 border border-solid border-zinc-900 dark:border-zinc-100 m-2 p-1 rounded-lg"
      name="email"
      type="password"
      value=""
    />
  </form>
</DocumentFragment>
`;

exports[`<FormInput /> with type: "text" should match the snapshot 1`] = `
<DocumentFragment>
  <form
    action="#"
  >
    <input
      class="bg-zinc-200 dark:bg-zinc-800 border border-solid border-zinc-900 dark:border-zinc-100 m-2 p-1 rounded-lg"
      name="email"
      type="text"
      value=""
    />
  </form>
</DocumentFragment>
`;
